platforms/oms-fulfillment/deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopee-oms-fulfillment
  labels:
    app: shopee-oms-fulfillment
spec:
  type: ClusterIP
  ports:
    - port: 8105
      targetPort: http
      protocol: TCP
      name: http
    - port: 9105
      targetPort: grpc
      protocol: TCP
      name: grpc
  selector:
    app: shopee-oms-fulfillment
